# EE-Wiki

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: raw-data-retrieval.mdc
.github/workflows/: ci.yml
config/: default.yaml  intent_exemplars.yaml
config/agents/: fa_agent.yaml
config/rules/: fa_recurrence.yaml  interface_naming.yaml  power_tree_flags.yaml  rail_presence.yaml
config/schema/: agents_role.schema.json  metadata.schema.json  qa_eval.schema.json
docs/adr/: 0001-chunking-strategy.md  0002-v1-runtime-stack.md  0003-external-llm-openai-compatible.md  0004-iwork-macos-export.md  0005-datasheet-figure-table-retrieval.md  0006-knowledge-graph-store.md  0007-schematic-connectivity-extraction.md  0008-multi-agent-runtime.md  0009-multi-source-schematic-map.md  0010-fa-session-external-integrations.md  0011-product-project-build-hierarchy.md  0012-chat-pipeline-grounding.md  0013-regex-llm-boundary-and-scope-lock.md  README.md
docs/architecture/: api-overview.md  data-flow.md  fa-agent-implementation-plan.md  fa-session.md  integrations-flames.md  integrations-radar.md  repository-structure.md  tool-contracts.md
docs/eval/: qa.md  qa.yaml
docs/usage/: agents.md  eval.md  index.md  ingest.md  knowledge-authoring.md  lab-handoff.md  local-setup.md  mcp.md  open-webui.md  query.md
prompts/_shared/: graph_rules.md  scope_rules.md
prompts/assistant/: default.md  role.md
prompts/classify/: default.md
prompts/debug/: default.md
prompts/design_review/: default.md
prompts/fa/: analyze_log.md  bound_suggestion_summary.md  checkin_ai_summary.md  checkin_background.md  (+9 more)
scripts/: ask.py  build_graph.py  eval_rag.py  evaluate_rules.py  index.py  ingest.py  mcp_serve.py  migrate_raw_layout.py  query.py  serve.py  serve_with_llm.sh  start_mlx_openai_server.sh  sync.py
tests/: conftest.py
(+399 files in other folders)
