[project]
name = "ee-wiki"
version = "0.0.0"
description = "Offline AI-native electronic engineering knowledge platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
ml = [
    "torch>=2.2",
    "transformers>=4.57",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    "jieba>=0.42",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "accelerate>=0.30",
    "numpy>=1.26",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ee_wiki"]

[tool.hatch.build.targets.sdist]
only-include = ["src/ee_wiki", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
